veevavault/1.2/modules/ROOT/pages/veevavault-connector-reference.adoc
= Veeva Vault Connector Reference - Mule 4
:page-aliases: connectors::veevavault/veevavault-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Veeva Vault Connector v1.2

Anypoint Connector for Veeva Vault (Veeva Vault Connector) works with the https://developer.veevavault.com/api/19.1/#authentication[Veeva Vault REST, Bulk, and Streaming API], depending on the operations you configure.

[[connection_configuration]]
== Connection Configuration


[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Name |String |The name for this configuration. Connectors reference the configuration with this name. | |X
|Vault URL |String |The URL of the Veeva Vault instance required for the connection. | |X
|Username |String |Username used to initialize the session. | |X
|Password |String |Password used to authenticate the user. | |X
|Version |String |Veeva Vault API version. |v20.1 |
|Client Id |String |The client ID to send with each request header to the Veeva Vault instance for tracking purposes. The format is `\{organization}-{component/team}`, for example `abcpharma-clinicalprod`. Before sending the request, the client ID is prefixed with `mulesoft` and suffixed with `client-vaultconnector`, for example `mulesoft-abcpharma-clinicalprod-client-vaultconnector`. | |X
|===

=== Response Timeout (Advanced Tab)

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Response Timeout |Integer |Maximum time, in milliseconds, that the connector waits for the Veeva Vault response. If the time elapses, a `Response Timeout` exception is thrown. | `30000 ms` |X
|===

=== Burst API Limit Profile (Advanced Tab)
`<veevavault:burst-api-limit-profile/>`

The burst API limit profile configuration to act upon if the specified burst API limit of the Veeva Vault API reaches the threshold of the configured value or is exceeded.

If *Burst API limit config* is enabled (default), then the connector evaluates the Veeva Vault API's response header (`X-VaultAPI-BurstLimitRemaining`) value against the specified API Limit threshold value. If the remaining burst API limit reaches or exceeds this threshold value, the connector waits for the specified amount of time to restart the count for the *Burst Limit Remaining*.

For more information, see https://developer.veevavault.com/docs/#api-rate-limits[API Rate Limit Headers].

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|API Limit Threshold |Integer |Enter the Veeva Vault API threshold limit. When this threshold is reached or exceeded, the connector waits the specified time. | `200` |X
|Wait Time |Integer |Time the connector will wait once threshold value is reached or exceeds the remaining API calls. | `5` |X
|Time Unit a|
* DAYS
* HOURS
* MINUTES
* SECONDS
* MILISECONDS
* NANOSECONDS

| | `MINUTES` |X
|===

=== Daily API Limit Profile (Advanced Tab)
`<veevavault:daily-api-limit-profile/>`

The Daily API Limit Profile to configure API limit threshold for evaluation with remaining daily API limit calls. Once daily API limit calls reach or exceed the specified threshold limit an exception is thrown. By default, its disable. For more information refer *https://developer.veevavault.com/docs/#api-rate-limits[API Rate Limit Headers].*

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|API Limit Threshold |Integer |The API Limit Threshold value to set the allowed daily limit for the number of API calls. Once the threshold is reached, the connector throws an `API_LIMIT_EXCEED` exception for each request invoking an API call.  | `10000` |X
|===

== Operations

* <<create_documents,Create Documents>>
* <<create_document_renditions,Create Document Renditions>>
* <<create_object_records,Create Object Records>>
* <<delete_document_renditions,Delete Document Renditions>>
* <<delete_documents,Delete Documents>>
* <<delete_object_records,Delete Object Records>>
* <<export_documents,Export Documents>>
* <<get_audit_details,Get Audit Details>>
* <<get_document_renditions_types,Get Document Renditions>>
* <<get_documents,Get Documents>>
* <<get_object_records,Get Object Records>>
* <<get_picklists,Get Picklists>>
* <<invoke_rest_api,Invoke REST API>>
* <<query,Query>>
* <<spark_validator,Spark Validator>>
* <<update_documents,Update Documents>>
* <<update_object_records,Update Object Records>>


[[create_documents]]
=== Create Documents
`<veevavault:create-documents>`

This operation creates documents on Veeva Vault using document metadata provided in CSV or JSON format.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String):

* CSV
* JSON

|Metadata format (CSV or JSON). | |X
|Document Metadata |Input Stream a|
The document metadata in CSV or JSON format as Input Stream. The following is the metadata:

image::veevavault/veevavault-connector-create-documents-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[create_document_renditions]]
=== Create Document Renditions
`<veevavault:create-document-renditions>`

Create Document Renditions on vault with provided metadata in CSV or JSON format.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format (CSV or JSON). | |X
|Document Metadata |Input Stream a|
The document metadata in CSV OR JSON format as Input Stream respective to Metadata format option selected. Following is the metadata:

image:veevavault/veevavault-connector-create-document-renditions-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[create_object_records]]
=== Create Object Records
`<veevavault:create-object-records>`

Create Object Records creates object records in bulk on vault using object metadata in CSV or JSON format.

==== Parameters

|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Object Name |String a|
The list of all vault objects available to select from the list; for example:

image::veevavault/veevavault-connector-create-object-records-object-name.png[]

| |X
|Metadata Format a| String |Metadata format (CSV or JSON) | |X
|Object Metadata |Input Stream a|
The object metadata, in CSV OR JSON format as the Input Stream respective to the Metadata format option selected. Metadata is shown in the following image:

image::veevavault/veevavault-connector-create-object-records-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[delete_document_renditions]]
=== Delete Document Renditions
`<veevavault:delete-document-renditions>`

Delete document renditions from the vault based on document renditions metadata provided in CSV or JSON format.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format either CSV or JSON. | |X
|Document Metadata |Input Stream a|
The document metadata in CSV OR JSON format as Input Stream respective to Metadata format option selected. Following is the metadata:

image::veevavault/veevavault-connector-delete-document-renditions-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[delete_documents]]
=== Delete Documents
`<veevavault:delete-documents>`

This operation deletes documents from the vault based on metadata document *IDs* provided in CSV or JSON format.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format either CSV or JSON. | |X
|Document Metadata |Input Stream a|
The document metadata either in CSV OR JSON format as Input Stream respective to Metadata format option selected. Following is the metadata:

image:veevavault/veevavault-connector-delete-documents-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[delete_object_records]]
=== Delete Object Records
`<veevavault:delete-object-records>`

This operation deletes object records in bulk on the vault using object ID metadata in CSV or JSON format.

==== Parameters
[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Object Name |String a|
The list of all vault objects that are available to select from the list; for example:

image::veevavault/veevavault-connector-create-object-records-object-name.png[]

| |X
|Metadata Format a|
Enum (String)

CSV

JSON

|Metadata format either CSV or JSON. | |X
|Object Metadata |Input Stream a|
The object metadata in CSV or JSON format as Input Stream respective to Metadata format option selected. The following image shows the metadata:

image:veevavault/veevavault-connector-delete-object-records-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[export_documents]]
=== Export Documents
`<veevavault:export-documents>`

This operation enables you to query a set of documents for export to your vault’s FTP staging server.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format either CSV or JSON. | |X
|Document Metadata |Input Stream a|
The document metadata (document IDs) in CSV or JSON format as Input Stream respective to the *Metadata Format* option selected. The following image shows the metadata:

image::veevavault/veevavault-connector-export-documents-input.png[]

|#[payload] |X
|Source |Boolean |Exclude source files. |`True` |
|Renditions |Boolean |Include renditions. |`False` |
|All Versions |Boolean |Include all versions or the latest version. |`False` |
|Polling Interval |Integer |Poll the vault at the specified interval, in seconds, until the job is successful. |`30` |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_audit_details]]
==== Get Audit Details
`<veevavault:get-audit-details>`

The Get Audit Details operation retrieves audit details for the specified audit type.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Audit Type |String a|
The list of audit types available on the vault from which to select; for example:

image::veevavault-connector-get-audit-details-audit-types.png[image,width=299,height=106]

| |X
|Start Date |String |The date from which to start retrieving audit information. Dates must be in the format `YYYY-MM-DDTHH:MM:SSZ`. | |
|End Date |String |The date from which to stop retrieving audit information. Dates must be in the format `YYYY-MM-DDTHH:MM:SSZ`. | |
|Fetch Size |Integer |The fetch size to which to limit the records per page. |`100` |
|Batch Size |Integer |The batch size that accommodates the number of pages in the specified number of batches.  |`10` |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_document_renditions_types]]
=== Get Document Renditions Types
`<veevavault:get-document-renditions>`

Get Document renditions types to retrieve document renditions details.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Document Metadata |Input Stream a|
The document metadata contains only *documentID* in CSV or JSON format as Input Stream. The following is the metadata:

image::veevavault-connector-get-document-renditions-types-input.png[image,width=293,height=38]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>


==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_documents]]
=== Get Documents
`<veevavault:get-documents>`

Get documents retrieves document details from the vault based on document type, subtype, and classification options selected. There is an option to provide document properties on which to build the VQL query, otherwise document properties are fetched based on type, subtype, and classification.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Type |String |The list of all document types that are available to select from. | |
|Subtype |String |The list of all document subtypes available on the vault to select from. | |
|Classification |String |The list of all document classifications available on vault to select from. | |
|Document Properties |List<String> |Insert document properties based on your business requirements into the list. If not provided, all queryable document properties are selected to build a VQL query and are invoked internally to retrieve document details. | |
|WHERE Clause |String |A WHERE clause that can be appended to the VQL query build dynamically. | |
|Fetch Size |Integer |The fetch size to which to limit the records per page. |`100` |
|Batch Size |Integer |The batch size that accommodates the number of pages in the specified number of batches. |`10` |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_object_records]]
=== Get Object Records
`<veevavault:get-object-records>`

Get Object Records retrieves object records in bulk on the vault using object ID metadata in CSV or JSON format.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Object Name |String a|
The list of all vault objects available to select from. For example:

image::veevavault-connector-create-object-records-object-name.png[image,width=323,height=246]

| |X
|Object Fields |List<String> |Based on business requirements, you can insert object fields into the list. If not provided, all active object fields available are selected to build a VQL query, which is invoked internally to retrieve object records details. | |
|WHERE Clause |String |A WHERE clause to append to the VQL query build dynamically | |
|Fetch Size |Integer |The fetch size limit for records per page |100 |
|Batch Size |Integer |The batch size that accommodates the number of pages in the specified number of batches |10 |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_picklists]]
==== Get Picklists
`<veevavault:get-picklists>`

The Get Picklists operation retrieves all available values configured on a picklist.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Picklist Name |String a|
The list of audit types available on the vault to select from; for example:

image::veevavault-connector-get-picklists-name.png[image,width=293,height=249]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[invoke_rest_api]]
=== Invoke REST API
<veevavault:invoke-rest-api>

The Invoke REST API operation invokes https://developer.veevavault.com/api/20.1/#documents[Veeva Vault Rest APIs] and returns responses in JSON (default) or XML format depending on the header *Accept* value provided. It's important to use bulk Rest APIs whenever possible, rather than single APIs so as to maintain https://developer.veevavault.com/docs/#api-rate-limits[API rate limits.]

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Method |String a|
The list of methods to invoke REST API.

image:veevavault-connector-invoke-rest-api-method.png[image,width=419,height=91]

| `GET` |X
|Path |String |
The URI Path for where to send the request

image:veevavault-connector-invoke-rest-api-path.png[image,width=625,height=31]

| |X
|Body |Input Stream |
The body of the request message to send with the request (except GET method request). Default is payload.

|#[payload]  |
|Headers |Map |
Headers in key-value format to send along with the request, if there are no headers required in a request, leave empty (default).

image:veevavault-connector-invoke-rest-api-headers.png[image,width=616,height=126]

| |
|URI Parameters |Map |
URI Parameters in key-value format to resolve the value in a path. If there are no URI parameters in a path, leave empty(default).

image:veevavault-connector-invoke-rest-api-uri-parameters.png[image,width=640,height=128]

| |
|Query Parameters |Map |
Query Parameters in key-value format to send along with the request. If there are no query parameters required in a request, leave empty (default).

image:veevavault-connector-invoke-rest-api-query-parameters.png[image,width=640,height=126]

| |
|Request Streaming Mode |Stream a|
Request to send in streaming mode. By default, if the type of the payload is a stream, streaming is used to send the request. Select from the drop-down list:

* ALWAYS
* AUTO
* NEVER | |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[query]]
=== Query
`<veevavault:query>`

Use the Query operation to execute the specified VQL query on the vault and retrieve results in pagination. Pagination is based on Veeva Vault's API.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|VQL Query |String a|
A VQL Query to define per the Veeva Vault VQL specification to be executed. See https://developer.veevavault.com/api/19.1/#vault-query-language-vql[VQL Query documentation] for more details. For example:

`SELECT id, name__v, study__v FROM :table`

| |X
|Input Parameters |Map<String, Object> a|
A map of String and Object in which every item represents a row to insert. The map contains the parameter names as keys and the value is the parameter it is bound to; for example:

----
{

'table': 'site__v'

}
----

|#[{}] |
|Fetch Size |Integer |The fetch size limit of the records per page |100 |
|Batch Size |Integer |The batch size that accommodates the number of pages in the specified number of batches. |10 |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[spark_validator]]
=== Spark Validator
`<veevavault:spark-message-validator>`

The Spark Validator operation validates and verifies the Spark message with the signature and public key retrieved from the vault.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Include Spark Headers|
Boolean
|Flag to include Spark headers in Spark message validator output.

|FALSE|
|Public Key Path|
String
|The directory path to store the public key (00001.pem) file. Retrieved from the vault, if not specified.
|`${mule.home}/apps/${app.name}/publickeys`|

|Spark Headers|
Object
|An attributes header received from the vault and embedded in the Spark message
|#[attributes.headers]|

|Spark Message|
Input Stream
|A Spark body message received from the vault
|#[payload]|

|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED
* VEEVAVAULT:INVALID_SPARK_MESSAGE
* VEEVAVAULT:INVALID_KEY_FORMAT


[[update_documents]]
=== Update Documents
`<veevavault:update-documents>`

The Update Documents operation updates the documents on the vault using editable document metadata provided in CSV or JSON format.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format either CSV or JSON | |X
|Document Metadata |Input Stream a|
The editable document metadata either in CSV OR JSON format as Input Stream respective to Metadata format option selected. The following is the metadata:

image::veevavault-connector-update-documents-input.png[image,width=286,height=343]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[update_object_records]]
=== Update Object Records
`<veevavault:update-object-records>`

Update Object Records updates an object records in bulk on vault using editable object metadata either in CSV or JSON format.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Object Name |String a|
The list of all vault objects available to select from; for example:

image::veevavault-connector-create-object-records-object-name.png[image,width=323,height=246]

| |X
|Metadata Format a|
Enum (String):

* CSV
* JSON

|Metadata format (CSV or JSON) | |X
|Object Metadata |Input Stream a|
The object metadata in CSV or JSON format as Input Stream respective to *Metadata Format* option selected. The following is the metadata:

image::veevavault-connector-update-object-records-input.png[image,width=283,height=346]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED


== See Also

* xref:index.adoc[Veeva Vault Connector]
* xref:release-notes::connector/veeva-vault-release-notes-mule-4.adoc[Veeva Vault Connector Release Notes]
* https://www.anypoint.mulesoft.com/exchange/org.mule.extension/mule-veevavault-connector/[Veeva Vault Connector in Anypoint Exchange]
