veevavault/1.3/modules/ROOT/pages/veevavault-connector-reference.adoc
= Veeva Vault Connector 1.3 Reference - Mule 4
:page-aliases: connectors::veevavault/veevavault-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]


Anypoint Connector for Veeva Vault (Veeva Vault Connector) works with the https://developer.veevavault.com/api/19.1/#authentication[Veeva Vault REST, Bulk, and Streaming API], depending on the operations you configure.

[[connection_configuration]]
== Connection Configuration


[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Name |String |The name for this configuration. Connectors reference the configuration with this name. | |X
|Vault URL |String |The URL of the Veeva Vault instance required for the connection. | |X
|Username |String |Username used to initialize the session. | |X
|Password |String |Password used to authenticate the user. | |X
|Version |String |Veeva Vault API version. |v20.1 |
|Client Id |String |The client ID to send with each request header to the Veeva Vault instance for tracking purposes. The format is `\{organization}-{component/team}`, for example `abcpharma-clinicalprod`. Before sending the request, the client ID is prefixed with `mulesoft` and suffixed with `client-vaultconnector`, for example `mulesoft-abcpharma-clinicalprod-client-vaultconnector`. | |X
|===

=== Response Timeout (Advanced Tab)

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Response Timeout |Integer |Maximum time, in milliseconds, that the connector waits for the Veeva Vault response. If the time elapses, a `Response Timeout` exception is thrown. | `30000 ms` |X
|===

=== Burst API Limit Profile (Advanced Tab)
`<veevavault:burst-api-limit-profile/>`

The burst API limit profile configuration to act upon if the specified burst API limit of the Veeva Vault API reaches the threshold of the configured value or is exceeded.

If *Burst API limit config* is enabled (default), then the connector evaluates the Veeva Vault API's response header (`X-VaultAPI-BurstLimitRemaining`) value against the specified API Limit threshold value. If the remaining burst API limit reaches or exceeds this threshold value, the connector waits for the specified amount of time to restart the count for the *Burst Limit Remaining*.

For more information, see https://developer.veevavault.com/docs/#api-rate-limits[API Rate Limit Headers].

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|API Limit Threshold |Integer |Enter the Veeva Vault API threshold limit. When this threshold is reached or exceeded, the connector waits the specified time. | `200` |X
|Wait Time |Integer |Time the connector will wait once threshold value is reached or exceeds the remaining API calls. | `5` |X
|Time Unit a|
* DAYS
* HOURS
* MINUTES
* SECONDS
* MILISECONDS
* NANOSECONDS

| | `MINUTES` |X
|===

=== Daily API Limit Profile (Advanced Tab)
`<veevavault:daily-api-limit-profile/>`

The Daily API Limit Profile to configure API limit threshold for evaluation with remaining daily API limit calls. Once daily API limit calls reach or exceed the specified threshold limit an exception is thrown. By default, its disable. For more information refer *https://developer.veevavault.com/docs/#api-rate-limits[API Rate Limit Headers].*

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|API Limit Threshold |Integer |The API Limit Threshold value to set the allowed daily limit for the number of API calls. Once the threshold is reached, the connector throws an `API_LIMIT_EXCEED` exception for each request invoking an API call.  | `10000` |X
|===

== Operations

* <<create_documents,Create Documents>>
* <<create_document_renditions,Create Document Renditions>>
* <<create_object_records,Create Object Records>>
* <<delete_document_renditions,Delete Document Renditions>>
* <<delete_documents,Delete Documents>>
* <<delete_object_records,Delete Object Records>>
* <<export_documents,Export Documents>>
* <<get_audit_details,Get Audit Details>>
* <<get_document_renditions_types,Get Document Renditions>>
* <<get_documents,Get Documents>>
* <<get_object_records,Get Object Records>>
* <<get_picklists,Get Picklists>>
* <<invoke_rest_api,Invoke REST API>>
* <<query,Query>>
* <<spark_validator,Spark Validator>>
* <<update_documents,Update Documents>>
* <<update_object_records,Update Object Records>>


[[create_documents]]
=== Create Documents
`<veevavault:create-documents>`

Creates single or multiple documents on Veeva Vault using document metadata provided in CSV or JSON format. Ensure that you have uploaded document files on the vault FTP server location with the document content to attach to the created documents.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String):

* CSV
* JSON

|Metadata format (CSV or JSON). | |X
|Document Metadata |Input Stream a|
The document metadata in CSV or JSON format as Input Stream. Ensure the payload is in the format specified in the *Metadata Format* field. The following is the metadata:

image::veevavault-connector-create-documents-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[create_document_renditions]]
=== Create Document Renditions
`<veevavault:create-document-renditions>`

Creates document renditions in bulk on Veeva Vault with provided metadata in CSV or JSON format.

Your vault must be in Migration Mode before using this operation. It takes CSV input data with a maximum size of 1 GB with a standard UTF-8-encoded value.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format (CSV or JSON). | |X
|Document Metadata |Input Stream a|
Document metadata payload with required metadata in CSV or JSON format. The payload must be in format specified in the *Metadata Format* field. Following is the metadata:

image:veevavault-connector-create-document-renditions-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[create_object_records]]
=== Create Object Records
`<veevavault:create-object-records>`

The Create Object Records operation enables you to create bulk object records for the selected vault object with the provided object metadata in CSV or JSON format.


==== Parameters

|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Object Name |String a|
Click the VeevaVault refresh icon (VeevaVault refresh icon) to retrieve the vault object list. Select the object name from the list to create records for the selected object.

; for example:

image::veevavault-connector-create-object-records-object-name.png[]

| |X
|Metadata Format a| String |Metadata format (CSV or JSON) | |X
|Object Metadata |Input Stream a|
The object metadata, in CSV OR JSON format as the Input Stream respective to the Metadata format option selected. Metadata is shown in the following image:

image::veevavault-connector-create-object-records-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[delete_document_renditions]]
=== Delete Document Renditions
`<veevavault:delete-document-renditions>`

The Delete Document Renditions operation enables you to delete document renditions in bulk using CSV or JSON format input metadata.


==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format either CSV or JSON. | |X
|Document Metadata |Input Stream a|
Document metadata payload with required metadata in CSV or JSON format. The payload must be in format specified in the *Metadata Format* field. Following is the metadata:

image::veevavault-connector-delete-document-renditions-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[delete_documents]]
=== Delete Documents
`<veevavault:delete-documents>`

This operation deletes documents from the vault based on metadata document *IDs* provided in CSV or JSON format.

The Delete Documents operation enables you to delete single or multiple documents  with input metadata in CSV or JSON format.



==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format either CSV or JSON. | |X
|Document Metadata |Input Stream a|
The document metadata either in CSV OR JSON format as Input Stream respective to Metadata format option selected. Following is the metadata:

image:veevavault/veevavault-connector-delete-documents-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[delete_object_records]]
=== Delete Object Records
`<veevavault:delete-object-records>`

This operation deletes object records in bulk on the vault using object ID metadata in CSV or JSON format.

==== Parameters
[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Object Name |String a|
The list of all vault objects that are available to select from the list; for example:

image::veevavault-connector-create-object-records-object-name.png[]

| |X
|Metadata Format a|
Enum (String)

CSV

JSON

|Metadata format either CSV or JSON. | |X
|Object Metadata |Input Stream a|
The object metadata in CSV or JSON format as Input Stream respective to Metadata format option selected. The following image shows the metadata:

image:veevavault/veevavault-connector-delete-object-records-input.png[]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[export_documents]]
=== Export Documents
`<veevavault:export-documents>`

This operation enables you to query a set of documents for export to your vault’s FTP staging server.

///bring config stuff here

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format either CSV or JSON. | |X
|Document Metadata |Input Stream a|
The document metadata (document IDs) in CSV or JSON format as Input Stream respective to the *Metadata Format* option selected. The following image shows the metadata:

image::veevavault-connector-export-documents-input.png[]

|#[payload] |X
|Source |Boolean |To exclude source files, set to false.  |`True` |
|Renditions |Boolean |To include renditions, set to true.  |`False` |
|All Versions |Boolean |To include all versions, or the latest version, set to true. |`False` |
|Polling Interval |Integer |Poll the vault at the specified interval, in seconds, until the job is successful. |`30` |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_audit_details]]
==== Get Audit Details
`<veevavault:get-audit-details>`

The Get Audit Details operation retrieves audit details for the specified audit type.

This operation provides a paging mechanism based on Mule standard pagination.

See Streaming and Pagination for more details.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Audit Type |String a|Click the refresh icon (VeevaVault refresh icon) to retrieve audit types from the vault. Select an audit type from the list whose audit details you need to retrieve.

The list of audit types available on the vault from which to select; for example:

image::veevavault-connector-get-audit-details-audit-types.png[image,width=299,height=106]

| |X
|Start Date |String |The date from which to start retrieving audit information. Dates must be in the format `YYYY-MM-DDTHH:MM:SSZ`.

(Optional) Specify the start date to retrieve audit information. This date cannot be more than 30 days in the past. Dates must be in YYYY-MM-DDTHH:MM:SSZ format. Dates and times are in UTC. If a time is not specified, it defaults to midnight (T00:00:00Z) on the specified date.

| |
|End Date |String |(Optional) Specify the end date to retrieve audit information. This date cannot be more than 30 days in the past. Dates must be in YYYY-MM- DDTHH:MM:SSZ format. Dates and times are in UTC. If the time is not specified, it defaults to midnight (T00:00:00Z) on the specified date.



The date from which to stop retrieving audit information. Dates must be in the format `YYYY-MM-DDTHH:MM:SSZ`. | |
|Fetch Size |Integer |Provides the number of records per page. |`100` |
|Batch Size |Integer |Provides the number of pages per batch.  |`10` |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_document_renditions_types]]
=== Get Document Renditions Types
`<veevavault:get-document-renditions>`

Get Document renditions types to retrieve document renditions details.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Document Metadata |Input Stream a|
The document metadata contains only *documentID* in CSV or JSON format as Input Stream. The following is the metadata:

image::veevavault-connector-get-document-renditions-types-input.png[image,width=293,height=38]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>


==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_documents]]
=== Get Documents
`<veevavault:get-documents>`

Get documents retrieves document details from Veeva Vault based on document type, subtype, and classification options selected. There is an option to provide document properties on which to build the VQL query, otherwise document properties are fetched based on type, subtype, and classification.

Using the selected type, subtype, and classification it fetches document properties metadata and builds VQL queries dynamically. The VQL query is then executed on the vault to retrieve document details. Place a For-Each/Splitter element after this operation to fetch each document’s data (page) sequentially.

This operation provides a paging mechanism based on Mule standard pagination. See Streaming and Pagination for more details.

The document type, subtype, and classification are optional. If none are selected then document properties metadata is fetched using API (/api/{version}/metadata/objects/documents/properties) and the VQL Query is built based on the document metadata properties added or inserted in the Document Properties list. If metadata properties are not provided then all queryable document properties are used in VQL and executed.


==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Type |String |The list of all document types that are available to select from. | |
|Subtype |String |The list of all document subtypes available on the vault to select from. | |
|Classification |String |The list of all document classifications available on vault to select from. | |
|Document Properties |List<String> |Insert document properties based on your business requirements into the list. If not provided, all queryable document properties are selected to build a VQL query and are invoked internally to retrieve document details. | |
|WHERE Clause |String |A WHERE clause that can be appended to the VQL query build dynamically. | |
|Fetch Size |Integer |The fetch size to which to limit the records per page. |`100` |
|Batch Size |Integer |The batch size that accommodates the number of pages in the specified number of batches. |`10` |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_object_records]]
=== Get Object Records
`<veevavault:get-object-records>`

The Get Object Records operation enables you to retrieve object records details using object metadata fields to build a VQL query dynamically and execute on vault to get object details. Place a For-Each/Splitter element after this operation to fetch each object records (page) sequentially.

This operation provides a paging mechanism based on Mule standard pagination. See Streaming and Pagination for more details.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Object Name |String a|
The list of all vault objects available to select from. For example:

image::veevavault-connector-create-object-records-object-name.png[image,width=323,height=246]

| |X
|Object Fields |List<String> |Based on business requirements, you can insert object fields into the list. If not provided, all active object fields available are selected to build a VQL query, which is invoked internally to retrieve object records details. | |
|WHERE Clause |String |Insert a LINKK SKK VQL WHERE clause (without using the keyword WHERE) conditions as per your business requirement and it will be appended to dynamically build a VQL query to execute on the vault. For example: study_country__v = ‘0SC000000000101’

 | |
|Fetch Size |Integer |The fetch size limit for records per page |100 |
|Batch Size |Integer |The batch size that accommodates the number of pages in the specified number of batches |10 |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[get_picklists]]
==== Get Picklists
`<veevavault:get-picklists>`

The Get Picklists operation retrieves all available values configured on a picklist.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Picklist Name |String a|
The list of audit types available on the vault to select from; for example:

image::veevavault-connector-get-picklists-name.png[image,width=293,height=249]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[invoke_rest_api]]
=== Invoke REST API
<veevavault:invoke-rest-api>

The Invoke REST API operation invokes https://developer.veevavault.com/api/20.1/#documents[Veeva Vault Rest APIs] and returns responses in JSON (default) or XML format depending on the header *Accept* value provided. It's important to use bulk Rest APIs whenever possible, rather than single APIs so as to maintain https://developer.veevavault.com/docs/#api-rate-limits[API rate limits.]

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Method |String a|
The list of methods to invoke REST API.

image:veevavault-connector-invoke-rest-api-method.png[image,width=419,height=91]

| `GET` |X
|Path |String |
The URI Path for where to send the request

image:veevavault-connector-invoke-rest-api-path.png[image,width=625,height=31]

| |X
|Body |Input Stream |
The body of the request message to send with the request (except GET method request). Default is payload.

|#[payload]  |
|Headers |Map |
Headers in key-value format to send along with the request, if there are no headers required in a request, leave empty (default).

image:veevavault-connector-invoke-rest-api-headers.png[image,width=616,height=126]

| |
|URI Parameters |Map |
URI Parameters in key-value format to resolve the value in a path. If there are no URI parameters in a path, leave empty(default).

image:veevavault-connector-invoke-rest-api-uri-parameters.png[image,width=640,height=128]

| |
|Query Parameters |Map |
Query Parameters in key-value format to send along with the request. If there are no query parameters required in a request, leave empty (default).

image:veevavault-connector-invoke-rest-api-query-parameters.png[image,width=640,height=126]

| |
|Request Streaming Mode |Stream a|
Request to send in streaming mode. By default, if the type of the payload is a stream, streaming is used to send the request. Select from the drop-down list:

* ALWAYS
* AUTO
* NEVER | |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[query]]
=== Query
`<veevavault:query>`

Use the Query operation to execute the specified VQL query on the vault and retrieve results in pagination. Pagination is based on Veeva Vault's API.

The Query operation enables you to execute the specified VQL query on the vault and retrieve the result in a paginated data input stream. Place a For-Each/Splitter element after the Query operation to fetch each record in sequential order.

Note: Do not specify LIMIT and OFFSET in the VQL query. These parameters are incorporated internally.

This operation provides a paging mechanism based on Mule standard pagination. See Streaming and Pagination for more details.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|VQL Query |String a|
A VQL Query to define per the Veeva Vault VQL specification to be executed. See https://developer.veevavault.com/api/19.1/#vault-query-language-vql[VQL Query documentation] for more details. For example:

`SELECT id, name__v, study__v FROM :table`

| |X
|Input Parameters |Map<String, Object> a|
A map of String and Object in which every item represents a row to insert. The map contains the parameter names as keys and the value is the parameter it is bound to; for example:

----
{

'table': 'site__v'

}
----

|#[{}] |
|Fetch Size |Integer |The fetch size limit of the records per page |100 |
|Batch Size |Integer |The batch size that accommodates the number of pages in the specified number of batches. |10 |
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[spark_validator]]
=== Spark Validator
`<veevavault:spark-message-validator>`

The Spark Validator operation validates and verifies the Spark message with the signature and public key retrieved from the vault.

The Spark Validator operation validates and verifies Spark messages triggered from the vault with a signature and public key. Upon successful validation and verification, the Spark message can be further processed in the Mule flow according to your business requirements. See Spark Messaging feature and functionalities and setup for more details.

The output of the Spark Validator operation includes Spark attributes (optional) with the Spark message as it is received from Vault.

Note: Before triggering a Spark message from the Vault make sure to raise a support ticket with Veeva Vault Support to increase the time interval (for example, 10 seconds) for the Spark message to resend or retry. By default, it is configured as 3 seconds, which is less than the time required for Spark Validator to complete message validation and verification.

Note: As per Veeva Systems the public key (00001.pem) expires every two years. You receive notification in advance advising you of the expiration date. If you are using this operation in a Mule application flow, after the public key expiration date you need to remove the public key file from the path configured in the Public Key Path field. A new public key will be created during execution of the key removal. If you don’t do this, Spark message verification fails as INVALID_SPARK_MESSAGE. The Mule application deployed on CloudHub with the default path must be restarted for successful Spark Message verification.

==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Include Spark Headers|
Boolean
|Flag to include Spark headers received from the vault in Spark Validator output. Default is FALSE.



|FALSE|
|Public Key Path|
String
|The directory path to store the public key (00001.pem) file. Retrieved from the vault, if not specified.

The path to where the public key (00001.pem) file is saved that will be used for verifying incoming Spark messages with a signature. Default is “${mule.home}/apps/${app.name}/publickeys”
|`${mule.home}/apps/${app.name}/publickeys`|

|Spark Headers|
Object
|An attributes header received from the vault and embedded in the Spark message

The Spark headers received from the vault. Default is #[attributes.headers]


|#[attributes.headers]|

|Spark Message|
Input Stream
|A Spark body message received from the vault

The Spark message body received from the vault. Default is #[payload].


|#[payload]|

|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED
* VEEVAVAULT:INVALID_SPARK_MESSAGE
* VEEVAVAULT:INVALID_KEY_FORMAT


[[update_documents]]
=== Update Documents
`<veevavault:update-documents>`

The Update Documents operation enables you to update bulk documents with the provided editable metadata in the payload in CSV or JSON format.


==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Metadata Format a|
Enum (String)

* CSV
* JSON

|Metadata format either CSV or JSON | |X
|Document Metadata |Input Stream a|
The editable document metadata either in CSV OR JSON format as Input Stream respective to Metadata format option selected. The following is the metadata:

image::veevavault-connector-update-documents-input.png[image,width=286,height=343]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED

[[update_object_records]]
=== Update Object Records
`<veevavault:update-object-records>`

Update Object Records updates an object records in bulk on vault using editable object metadata either in CSV or JSON format.

The Update Object Records operation enables you to update object records of specified vault object.



==== Parameters

[%header%autowidth.spread]
|===
|*Name* |*Type* |*Description* |*Default Value* |*Required*
|Object Name |String a|
The list of all vault objects available to select from; for example:

image::veevavault-connector-create-object-records-object-name.png[image,width=323,height=246]

| |X
|Metadata Format a|
Enum (String):

* CSV
* JSON

|Metadata format (CSV or JSON) | |X
|Object Metadata |Input Stream a|
The object metadata in CSV or JSON format as Input Stream respective to *Metadata Format* option selected. The following is the metadata:

image::veevavault-connector-update-object-records-input.png[image,width=283,height=346]

| |X
|===

==== Configurations

<<connection_configuration,Connection Configuration>>

==== Throws

* VEEVAVAULT:API_LIMIT_EXCEEDED
* VEEVAVAULT:ATTRIBUTE_NOT_SUPPORTED
* VEEVAVAULT:INACTIVE_USER
* VEEVAVAULT:INVALID_DATA
* VEEVAVAULT:INVALID_DOCUMENT
* VEEVAVAULT:INSUFFICIENT_ACCESS
* VEEVAVAULT:MALFORMED_URL
* VEEVAVAULT:METHOD_NOT_SUPPORTED
* VEEVAVAULT:NO_PERMISSION
* VEEVAVAULT:OPERATION_NOT_ALLOWED
* VEEVAVAULT:PARAMETER_REQUIRED


== See Also

* xref:index.adoc[Veeva Vault Connector]
* xref:release-notes::connector/veeva-vault-release-notes-mule-4.adoc[Veeva Vault Connector Release Notes]
* https://www.anypoint.mulesoft.com/exchange/org.mule.extension/mule-veevavault-connector/[Veeva Vault Connector in Anypoint Exchange]
